# distributed_MIS

./: Cargo.toml  README.md  d1.in  d2.in  run.sh
src/: main.rs  node.rs
src/roles/: coordinator.rs  creater.rs  mod.rs  node.rs  verifier.rs
